adapt to DeathChestRecord